--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.19.1",
@@ -13,7 +14,8 @@
   "scripts": {
     "test": "lerna run --stream --concurrency=1 test",
     "postinstall": "yarn lerna-bootstrap",
-    "lerna-bootstrap": "lerna bootstrap"
+    "lerna-bootstrap": "lerna bootstrap",
+    "start:backoffice": "./scripts/start.js"
   },
   "dependencies": {
     "eslint-import-resolver-lerna": "^1.1.0",
