--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,7 @@
     "start:watch": "npm run build:watch & NODE_PATH=./dist nodemon ./dist/index.js",
     "build": "tsc -p . --outDir ./dist",
     "build:watch": "npm run build -- --watch",
+    "typeorm": "ts-node --files ./src ./node_modules/typeorm/cli.js",
     "postinstall": "npm run build"
   },
   "repository": {
@@ -30,19 +31,25 @@
     "@slack/web-api": "^5.9.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.4",
+    "@types/mime-types": "^2.1.0",
     "@types/node": "^14.0.6",
+    "@types/tar-fs": "^2.0.0",
     "@types/uuid": "^7.0.2",
+    "aws-sdk": "^2.719.0",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "dayjs": "^1.8.24",
     "express": "^4.17.1",
     "firebase-admin": "^8.12.1",
+    "mime-types": "^2.1.27",
     "octokat": "^0.10.0",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
+    "tar-fs": "^2.1.0",
     "typeorm": "^0.2.25",
-    "typescript": "^3.8.3",
-    "uuid": "^7.0.3"
+    "typescript": "^3.9.7",
+    "uuid": "^7.0.3",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
