--- a/packages/react-microfrontend/package.json
+++ b/packages/react-microfrontend/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "react-microfrontend",
-  "version": "3.0.0",
+  "name": "@cmra/react",
+  "version": "0.0.1",
   "description": "",
   "author": "",
   "license": "MIT",
-  "repository": "/react-microfrontend",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
