--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,17 +3,17 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 trigger:
-- master
+  - master
 pool:
   vmImage: 'ubuntu-latest'
 steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '12.13'
-  displayName: 'Install Node.js'
-- script: |
-    yarn
-    yarn lerna-bootstrap
-    yarn test
-  # workingDirectory: ./packages/react-microfrontend
-  displayName: 'npm install and test'
+  - task: NodeTool@0
+    inputs:
+      versionSpec: '12.13'
+    displayName: 'Install Node.js'
+  - script: |
+      yarn
+      yarn lerna-bootstrap
+      yarn test
+    # workingDirectory: ./packages/react
+    displayName: 'npm install and test'
